# AIAgents

./: .env.example  .gitignore  AIAgent from scratch.ipynb  Dockerfile  README.md  docker-compose.yml  docker-compse.yml  main.py  pyproject.toml  telegram_bot.py  telegram_bot_test.py
app/: main.py
app/common/: config.py  entrypoint.py  utils.py
app/handler/: ask_handler.py  image_handler.py
app/handlers/: ask_handler.py  image_handler.py
app/models/: chat_model.py  imageModel.py
app/services/: ImgService.py  chatService.py  ragService.py
llm_ground/: basic_invoke.ipynb  basic_invoke.py  image_describe.py
